// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error message component renders out and match the snapshot 1`] = `
<div>
  <p
    class="sc-bdvvtL dTDJwP"
  >
    test
  </p>
</div>
`;

exports[`Error message component renders out the danger version and match the snapshot 1`] = `
<div>
  <p
    class="sc-bdvvtL hEzbBJ"
  >
    test
  </p>
</div>
`;
